force-app/main/default/objects/Account/fields/AccountShouldExport__c.field-meta.xml
<CustomField>
    <fullName>AccountShouldExport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would be automatically set to true if any of the field value mentioned Account export metadata is changed</description>
    <label>AccountShouldExport</label>
    <type>Checkbox</type>
</CustomField>