force-app/main/default/objects/Account/fields/Actual_state__c.field-meta.xml
<CustomField>
    <fullName>Actual_state__c</fullName>
    <formula>IF( Nr_of_Orders_this_year__c  &gt;= 1 , &quot;Customer&quot;,

IF( Nr_of_Orders_this_year__c =0, &quot;Old Customer&quot;,


IF(  Nr_of_Orders__c  = 1 , &quot;New Customer&quot; , Null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual state</label>
    <type>Text</type>
</CustomField>