force-app/main/default/objects/Account/fields/Last_modified_by_user__c.field-meta.xml
<CustomField>
    <fullName>Last_modified_by_user__c</fullName>
    <description>check identity of the modified person, and only bring the records modified by a person.</description>
    <formula>(LastModifiedBy.Username  &lt;&gt; &apos;adminosf@abacus-mu.digital.prf&apos;)  &amp;&amp;  AccountShouldExport__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last modified by user</label>
    <type>Checkbox</type>
</CustomField>