force-app/main/default/objects/Account/fields/Last_purchase_date__c.field-meta.xml
<CustomField>
    <fullName>Last_purchase_date__c</fullName>
    <label>Last purchase date</label>
    <type>Date</type>
</CustomField>