force-app/main/default/objects/Account/fields/Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Loyalty__c</fullName>
    <formula>IF(   Nr_of_Orders_this_year__c &gt; 7, &quot;Very loyal&quot;, 

    IF(  Nr_of_Orders_this_year__c  &gt;= 4 &amp;&amp; Nr_of_Orders_this_year__c   &lt;=  7, &quot;Loyal&quot;, 


      IF( Nr_of_Orders_this_year__c &lt;= 3, &quot;Not loyal&quot; , Null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loyalty</label>
    <type>Text</type>
</CustomField>