force-app/main/default/objects/Account/fields/Nr_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Nr_of_Orders__c</fullName>
    <label>Nr of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>