force-app/main/default/objects/Account/fields/Order_amount__c.field-meta.xml
<CustomField>
    <fullName>Order_amount__c</fullName>
    <formula>Order__r.TotalAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>