force-app/main/default/objects/Account/fields/OSF_CC_External_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>OSF_CC_External_Account_ID__c</fullName>
    <description>Used for B2C to SFSC integration</description>
    <externalId>true</externalId>
    <label>OSF CC External Account ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>