force-app/main/default/objects/Account/fields/osf_cif_number__c.field-meta.xml
<CustomField>
    <fullName>osf_cif_number__c</fullName>
    <label>CIF Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>