force-app/main/default/objects/Account/fields/osf_client_code__c.field-meta.xml
<CustomField>
    <fullName>osf_client_code__c</fullName>
    <externalId>true</externalId>
    <label>Client Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>