force-app/main/default/objects/Account/fields/osf_error__c.field-meta.xml
<CustomField>
    <fullName>osf_error__c</fullName>
    <label>ERP error</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>