force-app/main/default/objects/Account/fields/osf_free_shipment__c.field-meta.xml
<CustomField>
    <fullName>osf_free_shipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Shipment</label>
    <type>Checkbox</type>
</CustomField>