force-app/main/default/objects/Account/fields/osf_logo__c.field-meta.xml
<CustomField>
    <fullName>osf_logo__c</fullName>
    <description>company logo</description>
    <label>Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>