force-app/main/default/objects/Account/fields/osf_payment_condition__c.field-meta.xml
<CustomField>
    <fullName>osf_payment_condition__c</fullName>
    <label>Payment Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>