force-app/main/default/objects/Account/fields/osf_validPaymentTypes__c.field-meta.xml
<CustomField>
    <fullName>osf_validPaymentTypes__c</fullName>
    <label>Valid Payment Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>No Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>