force-app/main/default/objects/Account/fields/Previous_loyalty__c.field-meta.xml
<CustomField>
    <fullName>Previous_loyalty__c</fullName>
    <label>Previous loyalty</label>
    <length>250</length>
    <type>Text</type>
</CustomField>