force-app/main/default/objects/Account/fields/Previous_value__c.field-meta.xml
<CustomField>
    <fullName>Previous_value__c</fullName>
    <label>Previous value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>