force-app/main/default/objects/Account/fields/Recency__c.field-meta.xml
<CustomField>
    <fullName>Recency__c</fullName>
    <formula>TODAY()-  Last_purchase_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>