force-app/main/default/objects/Account/fields/Total_Amount_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Orders__c</fullName>
    <label>Total Amount of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>