force-app/main/default/objects/Account/fields/Total_sum_of_Orders_this_year__c.field-meta.xml
<CustomField>
    <fullName>Total_sum_of_Orders_this_year__c</fullName>
    <label>Total sum of Orders this year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>