force-app/main/default/objects/Account/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <formula>IF( Total_sum_of_Orders_this_year__c &gt; 200 , &quot;Heavy&quot;, 

    IF( Total_sum_of_Orders_this_year__c&gt;= 60, &quot;Medium&quot;, 


      IF( Total_sum_of_Orders_this_year__c &lt; 60, &quot;Low&quot; , Null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value</label>
    <type>Text</type>
</CustomField>