force-app/main/default/objects/Account/recordTypes/Abacus.recordType-meta.xml
<RecordType>
    <fullName>Abacus</fullName>
    <active>true</active>
    <label>Abacus B2C Person Account</label>
</RecordType>