force-app/main/default/objects/Account/listViews/SCC_Customers.listView-meta.xml
<ListView>
    <fullName>SCC_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>SFCC_Customer_Number__pc</columns>
    <columns>Contact_Status__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>SCC Customers</label>
</ListView>